--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "file-morph",
   "version": "1.0.0",
   "description": "A global utilty that allows developers to modify files using regex.",
-  "main": "./dist/index.js",
+  "main": "./app/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "rm -rf ./dist && tsc -b"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "preferGlobal": true,
   "bin": {
-    "file-morph": "./dist/index.js"
+    "file-morph": "./app/index.ts"
   },
   "repository": {
     "type": "git",
@@ -22,7 +21,8 @@
   },
   "homepage": "https://github.com/spiresd55/file-morph#readme",
   "dependencies": {
-    "commander": "^2.19.0",
-    "typescript": "^3.2.4"
+    "commander": "2.19.0",
+    "ts-node": "7.0.1",
+    "typescript": "3.2.4"
   }
 }
